# advent_of_code_practice

./: README.md  pyproject.toml
.github/DISCUSSION_TEMPLATE/: decision.yml
2023/20231201/: part_1.py  part_2.py
2023/20231202/: part_1.py
2023/20231203/: README.md  part_1.py  part_2.py
2023/20231204/: part_2.py
2023/20231205/: README.md  part_1.py
2023/20231206/: README.md  part_1.py  part_2.py
2023/20231207/: README.md  part_1.py
2023/20231208/: part_2.py
2023/20231209/: README.md
2023/20231210/: README.md  part_1.py
2023/20231211/: part_2.py
2023/20231212/: README.md
2023/20231213/: README.md  part_1.py
2023/20231214/: README.md
2023/20231215/: README.md
2023/20231216/: README.md
20231201/: README.md  part_2.py
20231202/: README.md  part_2.py
20231203/: part_1.py  part_2.py
20231204/: README.md  parser.py
20231205/: part_1.py  part_2.py
20231207/: part_2.py
20231208/: README.md  part_1.py  part_2.py
20231209/: part_1.py  part_2.py
20231210/: part_1.py  part_2.py
20231211/: README.md  part_1.py
20231212/: part_1.py  part_2.py
20231213/: 20231213_input_example2.txt  part_1.py  part_2.py
20231214/: part_1.py  part_2.py
20231215/: part_1.py  part_2.py
20231216/: part_1.py
2024/20241201/: README.md  part_1.py  part_2.py
2024/20241202/: README.md  part_1.py  part_2.py
2024/20241203/: README.md  part_1.py  part_2.py
2024/20241204/: README.md  part_2.py
2024/20241205/: 20241205_orders.txt  20241205_rules.txt  README.md  part_1.py  (+1 more)
utils/: code_template.j2  generate_templates.py  main.py  readme_template.j2
(+51 files in other folders)
