[tool.poetry]
name = "advent-of-code-practice"
version = "0.1.0"
description = ""
authors = ["Xiangshi Yin <xiangshi.yin@shopify.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"
typer = {extras = ["all"], version = "^0.12.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
